--- a/mod2sol/index.html
+++ b/mod2sol/index.html
@@ -17,7 +17,7 @@
  <div class="col-lg-4 col-md-6 col-sm-12">
    <div class="sec">
  	<h2 class="cricket">Cricket</h2>
- 	<p>International cricket matches have eleven players on each team. The game can also be played with fewer players, say about six on a team, with prior agreement from both teams.Like every other sport, cricket has rules and regulations that one must follow to play the gentleman's game. At present the indian team rules this sport. 
+ 	<p>International cricket matches have eleven players on each team. The game can also be played with fewer players, say about six on a team, with prior agreement from both teams.Like every other sport, cricket has rules and regulations that one must follow to play the gentleman's game. At present the indian team rules this sport. </p>
   </div>
  </div>
  <div class="col-lg-4 col-md-12 col-sm-12">
